@@ -5,6 +5,7 @@
 v0.6.6 (??.02.2010) (not released)
  * New unit test for ListBuilder
  * MediaMarker: multilanguage support and hooks
+ * util_Dates::date_mysql2tstamp returns null for a MySQL-Date 0000-00-00. Thanks to Lars Heber!
 
 v0.6.5 (25.02.2010) (not released)
  * ListBuilder supports subpart for empty lists.
